--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 
 <head>
@@ -7,6 +8,14 @@
 </head>
 
 <body>
+    <ul>
+        <li><a href="#welcome">Welcome</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#myfavouriteapps">My favourite apps</a></li>
+        <li><a href="#My work">My work</a></li>
+        <li><a href="#inspiration">Inspiration</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
     <section id="welcome">
         <img id="title_img" src="https://content.techgig.com/thumb/msid-75430401,width-860,resizemode-4/5-tips-for-students-to-improve-coding-skills-during-college.jpg?58220">
         <div>
@@ -16,13 +25,26 @@
             <h2> Coding apps <br> </h2>
         </div>
     </section>
-        <section id="about">
-            <h1> About </h1>
-            
-            <div>
-                <p> I love coding! It is my favourite thing to do in life since I joind White hat jr coding classes I had a lot of fun learning it. So I got interested and started to learn more. I learnt and learnt until I made my first game. That's when I started to make more and had a lot of fun. Thanks!</p>
-            </div>
+    
+    <section id="about">
+        <h1> About </h1>
+
+        <div>
+            <p> I love coding! It is my favourite thing to do in life since I joind White hat jr coding classes I had a lot of fun learning it. So I got interested and started to learn more. I learnt and learnt until I made my first game. That's when I started to make more and had a lot of fun. Thanks!</p>
+        </div>
     </section>
+
+
+    <section id="myfavouriteapps">
+
+        <h1>This is a review on my favourite app...</h1>
+
+        <p>My favourite is actually the one I made by my self. It is a health app which is extremely useful wether you are a gym person or not. It has cool features like a timer and a meditation music player. I have also put a test to calculate your BMI and the best part is that you can change your name and profile photo. I have put a live preview of it below, go check it out! </p>
+
+        <iframe width="100%" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/-JTGauBrm0BAEjBH2MgahpsZ_yltcUE2wmvk5W89OMf/embed?nosource"></iframe>
+    </section>
+
+
 
 </body>
 
