--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
 
     </section>
 
+    <section id="contact">
+        <h1>Contacts</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.001261788775!2d77.43838181506956!3d28.629724282418938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cee3b9de30849%3A0xe42bb958ae4799d0!2sMahagun%20Mascot%20Apartments%2C%20Crossings%20Republik%2C%20Ghaziabad%2C%20Uttar%20Pradesh%20201009!5e0!3m2!1sen!2sin!4v1612785894794!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <h3>✉️ Email Address:- aaryav.jaiswal@gmail.com </h3>
+        
+        
+
+
+
+
+
+
+    </section>
+
 
 
 </body>
